@@ -82,6 +82,15 @@ FOO=`perl -MExtUtils::Embed -e ccopts`
 echo Adding perl CFLAGS ${FOO}
 CFLAGS=${CFLAGS}\ ${FOO}
 
+dnl Find the location of XSUBPP
+AC_MSG_CHECKING(for the perl xsubpp precompiler)
+XSUBPPDIR="`(perl -MExtUtils::MakeMaker -e 'print ExtUtils::MakeMaker->new({NAME => qw(owl)})->tool_xsubpp;') | grep ^XSUBPPDIR | sed -e 's/XSUBPPDIR = //g;'`"
+if test -n "${XSUBPPDIR}"; then
+   AC_MSG_RESULT(${XSUBPPDIR})
+else
+   AC_MSG_ERROR(not found)
+fi
+
 dnl Add LDFLAGS for embeded perl
 FOO=`perl -MExtUtils::Embed -e ldopts`
 echo Adding perl LDFLAGS ${FOO}
@@ -95,5 +104,7 @@ AC_CHECK_FILE(/usr/share/terminfo, AC_DEFINE(TERMINFO, "/usr/share/terminfo"),
 dnl Checks for library functions.
 dnl AC_PROG_GCC_TRADITIONAL
 dnl AC_CHECK_FUNCS(gethostname strdup)
+
+AC_SUBST(XSUBPPDIR)
 
 AC_OUTPUT(Makefile)
